--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: z_time_ago
-description: A new Flutter package project.
-version: 0.0.2
+description: A flutter package to get duration between current date and a given date for kurdish, arabic and english.
+version: 0.0.3
 homepage: https://github.com/zakarya0/z_time_ago
 
 environment:
@@ -14,7 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
